# scotton-aws-utils

./: .gitignore  FINAL_SUMMARY.md  INSTALLATION_STATUS.md  LICENSE  MANIFEST.in  MIGRATION_REPORT.md  PACKAGE_CREATION_GUIDE.md  README.md  REQUIREMENTS_UPDATE.md  pyproject.toml
scotton_aws_utils/: __init__.py  aws.py  lambdadeployer.py  util.py
